Apply subnav jump fix

--- a/www/jtracker/core/css/template.css
+++ b/www/jtracker/core/css/template.css
@@ -8758,3 +8758,6 @@ div#nav-search form input[type="text"] {
     position: static;
   }
 }
+.subnav-wrapper {
+  margin-bottom: 22px;
+}
